simplify python deps installation in CI

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -19,12 +19,6 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  PIP_VER: "21.1.1"
-  WHEEL_VER: "0.35.1"
-  STOOLS_VER: "50.3.2"
-  PYTEST_VER: "6.0.1"
-  PYTEST_RANDOMLY_VER: "3.8.0"
-  SCIPY_VER: "1.5.4"
   JEDI_VER: "0.17.2"  # https://github.com/ipython/ipython/issues/12740
   IDNA_VER: "2.8"  # https://github.com/psf/requests/issues/5710
   SRC_DIR: "D:\\a\\open3d\\open3d"
@@ -54,7 +48,6 @@ jobs:
     steps:
       - name: Disk space used
         run: Get-PSDrive
-
       - name: Install CUDA
         if: ${{ matrix.BUILD_CUDA == 'ON' }}
         run: |
@@ -87,15 +80,12 @@ jobs:
           echo "CUDA_PATH=$CUDA_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           echo "CUDA_PATH_V$CUDA_VER_ID=$CUDA_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           echo "$CUDA_PATH\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-
       - name: Checkout source code
         uses: actions/checkout@v2
-
       - name: Set up Python version
         uses: actions/setup-python@v2
         with:
           python-version: 3.6
-
       - name: Config
         # Move build directory to C: https://github.com/actions/virtual-environments/issues/1341
         run: |
@@ -117,7 +107,6 @@ jobs:
             -DBUILD_UNIT_TESTS=ON `
             -DBUILD_CUDA_MODULE=${{ matrix.BUILD_CUDA }} `
             ${{ env.SRC_DIR }}
-
       - name: Build
         working-directory: ${{ env.BUILD_DIR }}
         run: |
@@ -126,7 +115,6 @@ jobs:
             --target build-examples-iteratively
           cmake --build . --parallel ${{ env.NPROC }} --config ${{ matrix.CONFIG }} `
             --target INSTALL
-
       - name: Package
         working-directory: ${{ env.BUILD_DIR }}
         if: ${{ matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
@@ -141,7 +129,6 @@ jobs:
           $DEVEL_PKG_NAME=(Get-ChildItem package/open3d-devel-*.zip).Name
           echo "DEVEL_PKG_NAME=$DEVEL_PKG_NAME" | Out-File -FilePath `
             $env:GITHUB_ENV -Encoding utf8 -Append
-
       - name: Upload package
         if: ${{ matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
         uses: actions/upload-artifact@v2
@@ -149,7 +136,6 @@ jobs:
           name: open3d-devel-windows
           path: ${{ env.BUILD_DIR }}/package/${{ env.DEVEL_PKG_NAME }}
           if-no-files-found: error
-
       - name: GCloud CLI setup
         if: ${{ github.ref == 'refs/heads/master' && matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
         # https://github.com/GoogleCloudPlatform/github-actions/issues/100#issuecomment-650798308
@@ -161,7 +147,6 @@ jobs:
           service_account_key: ${{ secrets.GCE_SA_KEY_GPU_CI }}
           project_id: ${{ secrets.GCE_DOCS_PROJECT }}
           export_default_credentials: true
-
       - name: Upload package to GCS bucket
         if: ${{ github.ref == 'refs/heads/master' && matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
         env:
@@ -174,7 +159,6 @@ jobs:
           } else {
             throw "Devel package upload failed"
           }
-
       - name: Run C++ unit tests
         if: ${{ matrix.BUILD_CUDA == 'OFF' }}
         working-directory: ${{ env.BUILD_DIR }}
@@ -199,11 +183,8 @@ jobs:
         working-directory: ${{ env.BUILD_DIR }}
         run: |
           $ErrorActionPreference = 'Stop'
-          python -m pip install --upgrade pip==${{ env.PIP_VER }} `
-            wheel==${{ env.WHEEL_VER }} `
-            setuptools==${{ env.STOOLS_VER }} `
-            jedi==${{ env.JEDI_VER }} `
-            idna==${{ env.IDNA_VER }}
+          python -m pip install -r ..\python\requirements_build.txt
+          python -m pip install --upgrade jedi==${{ env.JEDI_VER }} idna==${{ env.IDNA_VER }}
           cmake --build . --config ${{ matrix.CONFIG }} --target install-pip-package
       - name: Import python package
         # If SHARED == ON, Open3D.dll needs to be copied, which is not recommended for python.
@@ -235,19 +216,17 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
-
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python_version }}
-
       - name: Install Python dependencies
         working-directory: ${{ env.SRC_DIR }}
         run: |
           $ErrorActionPreference = 'Stop'
-          python -m pip install -r python/requirements.txt
-          python -m pip install -r python/requirements_jupyter_build.txt
-
+          python -m pip install -r python\requirements.txt
+          python -m pip install -r python\requirements_build.txt
+          python -m pip install -r python\requirements_jupyter_build.txt
       - name: Config
         run: |
           $ErrorActionPreference = 'Stop'
@@ -267,28 +246,22 @@ jobs:
             -DBUILD_WEBRTC=ON `
             -DBUILD_JUPYTER_EXTENSION=ON `
             ${{ env.SRC_DIR }}
-
       - name: Build Python package
         working-directory: ${{ env.BUILD_DIR }}
         run: |
           $ErrorActionPreference = 'Stop'
-          python -m pip install --upgrade pip==${{ env.PIP_VER }} `
-                                          wheel==${{ env.WHEEL_VER }} `
-                                          setuptools==${{ env.STOOLS_VER }}
           cmake --build . --parallel ${{ env.NPROC }} --config Release --target pip-package
           $PIP_PKG_NAME=(Get-ChildItem lib/python_package/pip_package/open3d*.whl).Name
           echo "PIP_PKG_NAME=$PIP_PKG_NAME"  | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           $PYTHON_EXECUTABLE=(python -c "import sys; print(sys.executable)")
           echo $PYTHON_EXECUTABLE
           echo "PYTHON_EXECUTABLE=$PYTHON_EXECUTABLE"  | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-
       - name: Upload wheel
         uses: actions/upload-artifact@v2
         with:
           name: open3d_win_amd64_wheels
           path: ${{ env.BUILD_DIR }}/lib/python_package/pip_package/${{ env.PIP_PKG_NAME }}
           if-no-files-found: error
-
       - name: GCloud CLI setup
         if: ${{ github.ref == 'refs/heads/master' }}
         # https://github.com/GoogleCloudPlatform/github-actions/issues/100#issuecomment-650798308
@@ -300,7 +273,6 @@ jobs:
           service_account_key: ${{ secrets.GCE_SA_KEY_GPU_CI }}
           project_id: ${{ secrets.GCE_DOCS_PROJECT }}
           export_default_credentials: true
-
       - name: Upload wheel to GCS bucket
         if: ${{ github.ref == 'refs/heads/master' }}
         env:
@@ -337,33 +309,24 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
-
       - name: Download wheels
         uses: actions/download-artifact@v2
         # See https://github.com/dawidd6/action-download-artifact for more
         # flexible artifact download options
         with:
           name: open3d_win_amd64_wheels
-
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python_version }}
-
       - name: Test Python package
         run: |
           $ErrorActionPreference = 'Stop'
           python -V
           python -m venv open3d_test_venv
           open3d_test_venv\Scripts\Activate.ps1
-
-          python -m pip install --upgrade pip==${{ env.PIP_VER }} `
-            wheel==${{ env.WHEEL_VER }} `
-            setuptools==${{ env.STOOLS_VER }}
-          python -m pip install -U pytest==${{ env.PYTEST_VER }}
-          python -m pip install -U pytest-randomly==${{ env.PYTEST_RANDOMLY_VER }}
-          python -m pip install -U scipy==${{ env.SCIPY_VER }} `
-            tensorboard==${{ env.TENSORFLOW_VER }}
+          python -m pip install -r python\requirements_build.txt
+          python -m pip install -r python\requirements_test.txt
           $py_tag=(python -c "import sys; print(f'cp{sys.version_info.major}{sys.version_info.minor}')")
           if (Test-Path -Path "pip_package") {
             $PIP_PKG_NAME=(Get-ChildItem pip_package\open3d*-$py_tag-*.whl).Name
@@ -374,9 +337,7 @@ jobs:
           python -m pip install "$PIP_PKG_NAME"
           python -c "import open3d; print('Imported:', open3d)"
           python -c "import open3d; print('CUDA enabled: ', open3d.core.cuda.is_available())"
-
           deactivate
-
       - name: Run Python unit tests (benchmarks)
         run: |
           $ErrorActionPreference = 'Stop'
