--- a/.github/workflows/vtk_packages.yml
+++ b/.github/workflows/vtk_packages.yml
@@ -1,4 +1,4 @@
-name: VTK_Packages
+name: VTK Packages
 
 on:
   # pull_request:
@@ -6,34 +6,30 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-
 jobs:
 
-  Unix:
+  Linux:
     runs-on: ubuntu-18.04
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
-
       - name: CMake configure
         run: |
           mkdir build
           cd build
           cmake ../3rdparty/vtk
-
       - name: Build
         run: |
           cd build
-          make -j2
+          make -j$(nproc)
           cmake -E sha256sum vtk*.tar.gz > checksum_linux.txt
-
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           name: vtk_linux
           path: |
-                 build/vtk*.tar.gz
-                 build/checksum*.txt
+            build/vtk*.tar.gz
+            build/checksum*.txt
           if-no-files-found: error
 
   Windows:
@@ -55,10 +51,8 @@ jobs:
     steps:
       - name: Disk space used
         run: Get-PSDrive
-
       - name: Checkout source code
         uses: actions/checkout@v2
-
       - name: Config
         # Move build directory to C: https://github.com/actions/virtual-environments/issues/1341
         run: |
@@ -70,7 +64,6 @@ jobs:
             -DSTATIC_WINDOWS_RUNTIME=${{ matrix.STATIC_RUNTIME }} `
             "${{ env.SRC_DIR }}\3rdparty\vtk"
           ls
-
       - name: Build
         working-directory: ${{ env.BUILD_DIR }}
         run: |
@@ -80,16 +73,14 @@ jobs:
           cmake --build . --parallel ${{ env.NPROC }} --config Debug
           ls
           cmake -E sha256sum vtk*.tar.gz > checksum_win_${{matrix.configuration}}.txt
-
       - name: Upload package
         uses: actions/upload-artifact@v2
         with:
           name: vtk_windows_${{matrix.configuration}}
           path: |
-                 ${{ env.BUILD_DIR }}/vtk*.tar.gz
-                 ${{ env.BUILD_DIR }}/checksum*.txt
+            ${{ env.BUILD_DIR }}/vtk*.tar.gz
+            ${{ env.BUILD_DIR }}/checksum*.txt
           if-no-files-found: error
-
 
   MacOS:
     runs-on: macos-10.15
@@ -99,24 +90,21 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
-
       - name: CMake configure
         run: |
           mkdir build
           cd build
           cmake -DCMAKE_OSX_DEPLOYMENT_TARGET=10.14 ../3rdparty/vtk
-
       - name: Build
         run: |
           cd build
           make -j2
           cmake -E sha256sum vtk*.tar.gz > checksum_macos.txt
-
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           name: vtk_macos
           path: |
-                 build/vtk*.tar.gz
-                 build/checksum*.txt
+            build/vtk*.tar.gz
+            build/checksum*.txt
           if-no-files-found: error
