--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -24,7 +24,7 @@ jobs:
           python-version: 3.6
       - name: Install dependencies
         run: |
-          pip install -U clang-format~=10.0.0 yapf==0.30.0 nbformat
+          pip install -r python/requirements_style.txt
       - name: Run style check
         run: |
           python util/check_style.py
