--- a/docker/Dockerfile.openblas
+++ b/docker/Dockerfile.openblas
@@ -6,11 +6,11 @@ FROM ${BASE_IMAGE}
 SHELL ["/bin/bash", "-c"]
 
 # Required build args, should be specified in docker_build.sh
-ARG CMAKE_VER
+ARG CMAKE_VERSION
 ARG CCACHE_TAR_NAME
 ARG PYTHON_VERSION
 ARG DEVELOPER_BUILD
-RUN if [ -z "${CMAKE_VER}"       ]; then echo "Error: ARG CMAKE_VER       not specified."; exit 1; fi \
+RUN if [ -z "${CMAKE_VERSION}"   ]; then echo "Error: ARG CMAKE_VERSION   not specified."; exit 1; fi \
  && if [ -z "${CCACHE_TAR_NAME}" ]; then echo "Error: ARG CCACHE_TAR_NAME not specified."; exit 1; fi \
  && if [ -z "${PYTHON_VERSION}"  ]; then echo "Error: ARG PYTHON_VERSION  not specified."; exit 1; fi \
  && if [ -z "${DEVELOPER_BUILD}" ]; then echo "Error: ARG DEVELOPER_BUILD not specified."; exit 1; fi
@@ -103,12 +103,12 @@ ENV PYENV_ROOT="/root/.pyenv"
 ENV PATH="${PYENV_ROOT}/bin:${PYENV_ROOT}/shims:${PATH}"
 
 # CMake
-# PWD is /, cmake will be installed to /root/${CMAKE_VER}/bin/cmake
-RUN CMAKE_VER_NUMBERS=$(echo "${CMAKE_VER}" | cut -d"-" -f2) \
- && wget -q https://github.com/Kitware/CMake/releases/download/v${CMAKE_VER_NUMBERS}/${CMAKE_VER}.tar.gz \
- && tar -xf ${CMAKE_VER}.tar.gz \
- && cp -ar ${CMAKE_VER} ${HOME}
-ENV PATH=${HOME}/${CMAKE_VER}/bin:${PATH}
+# PWD is /, cmake will be installed to /root/${CMAKE_VERSION}/bin/cmake
+RUN CMAKE_VER_NUMBERS=$(echo "${CMAKE_VERSION}" | cut -d"-" -f2) \
+ && wget -q https://github.com/Kitware/CMake/releases/download/v${CMAKE_VER_NUMBERS}/${CMAKE_VERSION}.tar.gz \
+ && tar -xf ${CMAKE_VERSION}.tar.gz \
+ && cp -ar ${CMAKE_VERSION} ${HOME}
+ENV PATH=${HOME}/${CMAKE_VERSION}/bin:${PATH}
 
 # Open3D C++ dependencies
 # Done before copying the full Open3D directory for better Docker caching
