--- a/docker/Dockerfile.ci
+++ b/docker/Dockerfile.ci
@@ -65,7 +65,9 @@ RUN apt-get update && apt-get install -y \
 
 # Miniconda or Intel conda
 ENV PATH="/root/miniconda3/bin:${PATH}"
+ENV PATH="/root/miniconda3/envs/open3d/bin:${PATH}"
 ENV PATH="/opt/intel/oneapi/intelpython/latest/bin:${PATH}"
+ENV PATH="/opt/intel/oneapi/intelpython/latest/envs/open3d/bin:${PATH}"
 RUN if [ "${BUILD_SYCL_MODULE}" = "OFF" ]; then \
         wget -q https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh; \
         bash Miniconda3-latest-Linux-x86_64.sh -b; \
