--- a/docker/Dockerfile.wheel
+++ b/docker/Dockerfile.wheel
@@ -30,10 +30,10 @@ SHELL ["/bin/bash", "-c"]
 # https://forums.developer.nvidia.com/t/gpg-error-http-developer-download-nvidia-com-compute-cuda-repos-ubuntu1804-x86-64/212904/3
 # https://forums.developer.nvidia.com/t/18-04-cuda-docker-image-is-broken/212892/10
 # https://code.visualstudio.com/remote/advancedcontainers/reduce-docker-warnings#:~:text=Warning%3A%20apt%2Dkey%20output%20should,not%20running%20from%20a%20terminal.
-ENV APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=DontWarn
-RUN apt-key del 7fa2af80
-RUN apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/x86_64/3bf863cc.pub
-RUN apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64/7fa2af80.pub
+RUN export APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=DontWarn \
+ && apt-key del 7fa2af80 \
+ && apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/x86_64/3bf863cc.pub \
+ && apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64/7fa2af80.pub
 
 # Dependencies: basic
 RUN apt-get update && apt-get install -y \
