--- a/docker/Dockerfile.ci
+++ b/docker/Dockerfile.ci
@@ -38,8 +38,8 @@ RUN if [ -z "${DEVELOPER_BUILD}"      ]; then echo "Error: ARG DEVELOPER_BUILD  
 RUN if [ "${BUILD_CUDA_MODULE}" = "ON" ]; then \
         export APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=DontWarn; \
         apt-key del 7fa2af80; \
-        APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=DontWarn apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/x86_64/3bf863cc.pub; \
-        APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=DontWarn apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64/7fa2af80.pub; \
+        apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/x86_64/3bf863cc.pub; \
+        apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64/7fa2af80.pub; \
     fi
 
 # Forward all ARG to ENV
