--- a/docker/Dockerfile.wheel
+++ b/docker/Dockerfile.wheel
@@ -25,6 +25,15 @@ ENV SUDO=command
 # Miniconda requires bash as the default shell.
 SHELL ["/bin/bash", "-c"]
 
+# Fix Nvidia repo key rotation issue
+# https://forums.developer.nvidia.com/t/notice-cuda-linux-repository-key-rotation/212771
+# https://forums.developer.nvidia.com/t/18-04-cuda-docker-image-is-broken/212892/10
+# https://code.visualstudio.com/remote/advancedcontainers/reduce-docker-warnings#:~:text=Warning%3A%20apt%2Dkey%20output%20should,not%20running%20from%20a%20terminal.
+RUN export APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=DontWarn \
+ && apt-key del 7fa2af80 \
+ && apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/x86_64/3bf863cc.pub \
+ && apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64/7fa2af80.pub
+
 # Dependencies: basic
 RUN apt-get update && apt-get install -y \
     git  \
