Update CMake for windows

--- a/cpp/open3d/visualization/gui/CMakeLists.txt
+++ b/cpp/open3d/visualization/gui/CMakeLists.txt
@@ -1,5 +1,5 @@
 if (WIN32)
-    set (EmbedResourcesExecutable "Release/EmbedResources.exe")
+    set (EmbedResourcesExecutable ${PROJECT_BINARY_DIR}/bin/Release/EmbedResources.exe)
 else()
     set (EmbedResourcesExecutable "./EmbedResources")
 endif()
